--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "nodemailer": "^6.9.1",
+    "nodemailer-plugin-inline-base64": "^2.1.1",
     "nodemon": "^2.0.20"
   }
 }
